window title alignment fix

--- a/src/components/styles/FileIcons.less
+++ b/src/components/styles/FileIcons.less
@@ -15,7 +15,7 @@
   padding-bottom: 10px;
 
   svg {
-    fill: #39c0cc;
+    fill: #7be0e9;
   }
 }
 
