--- a/src/components/styles/window.less
+++ b/src/components/styles/window.less
@@ -66,6 +66,7 @@
   overflow: hidden;
   max-width: 90%;
   align-content: center;
+  text-align: center;
   width: 100%;
   margin-right: 50px;
 }
